modules/VPC/main.tf
locals {
  azs = slice(data.aws_availability_zones.available.names, 0, var.az_count)
}

data "aws_availability_zones" "available" {}

resource "aws_vpc" "PCI_VPC" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = { Name = "${var.project_name}-vpc" }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.PCI_VPC.id
  tags = { Name = "${var.project_name}-igw" }
}

# Public subnets
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.PCI_VPC.id
  cidr_block              = "10.20.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"
  tags = { Name = "${var.project_name}-public" }
}


resource "aws_subnet" "private_app" {
  vpc_id            = aws_vpc.PCI_VPC.id
  cidr_block        = "10.20.2.0/24"
  availability_zone = "us-east-1a"
  tags = { Name = "${var.project_name}-private-app" }
}

resource "aws_subnet" "private_db" {
  vpc_id            = aws_vpc.PCI_VPC.id
  cidr_block        = "10.20.3.0/24"
  availability_zone = "us-east-1a"
  tags = { Name = "${var.project_name}-private-db" }
}

# EIP + NAT in first public subnet
resource "aws_eip" "nat" {
  domain = "vpc"
  tags = { Name = "${var.project_name}-nat-eip" }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public.id
  tags = { Name = "${var.project_name}-nat" }
  depends_on = [aws_internet_gateway.igw]
}

# Route tables
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.PCI_VPC.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = { Name = "${var.project_name}-public-rt" }
}

resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private_app" {
  vpc_id = aws_vpc.PCI_VPC.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }
  tags = { Name = "${var.project_name}-private-app-rt" }
}

resource "aws_route_table_association" "private_app_assoc" {
  subnet_id      = aws_subnet.private_app.id
  route_table_id = aws_route_table.private_app.id
}

resource "aws_route_table" "private_db" {
  vpc_id = aws_vpc.PCI_VPC.id
  # No default route to Internet; DB stays internal only
  tags = { Name = "${var.project_name}-private-db-rt" }
}

resource "aws_route_table_association" "private_db_assoc" {
  subnet_id      = aws_subnet.private_db.id
  route_table_id = aws_route_table.private_db.id
}
